[gd_scene load_steps=4 format=3 uid="uid://cmbnkhwicr04o"]

[ext_resource type="Material" uid="uid://bpxiy7koaf8n8" path="res://art/materials/testing/brown.tres" id="1_14stt"]
[ext_resource type="Script" uid="uid://bkq6wevxpb8mm" path="res://scripts/levels/take_out_trash/catapult.gd" id="1_pn6mw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pn6mw"]

[node name="Catapult" type="Node3D" node_paths=PackedStringArray("catapult_arm", "catapult_bowl")]
script = ExtResource("1_pn6mw")
catapult_arm = NodePath("CSGCombiner3D/CSGBox3D")
catapult_bowl = NodePath("CSGCombiner3D/CSGBox3D/shot_thing/CSGSphere3D")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]

[node name="base" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.375, 0)
size = Vector3(2, 0.75, 3)
material = ExtResource("1_14stt")

[node name="load" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
size = Vector3(1, 0.5, 2)

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(0.999945, 0.0104718, 0, -0.00888057, 0.848001, -0.529919, -0.0055492, 0.52989, 0.848048, -0.0271038, 1.72433, -1.05102)
size = Vector3(0.25, 0.25, 2.31982)

[node name="shot_thing" type="CSGCombiner3D" parent="CSGCombiner3D/CSGBox3D"]
transform = Transform3D(0.996021, -0.00832713, 0.0887418, -0.0399921, 0.848029, 0.528439, -0.079656, -0.529884, 0.844322, 0.135238, -0.905422, 1.80365)

[node name="CSGSphere3D" type="CSGSphere3D" parent="CSGCombiner3D/CSGBox3D/shot_thing"]
transform = Transform3D(1, -2.77396e-11, 0, 6.82121e-12, 1, -7.27596e-12, 7.45058e-09, 0, 1, 0.14164, 2.81807, -2.79984)
radius = 1.0
rings = 12

[node name="subtractor" type="CSGCombiner3D" parent="CSGCombiner3D/CSGBox3D/shot_thing"]
operation = 2

[node name="CSGSphere3D2" type="CSGSphere3D" parent="CSGCombiner3D/CSGBox3D/shot_thing/subtractor"]
transform = Transform3D(1, -2.77396e-11, 0, 6.82121e-12, 1, -7.27596e-12, 7.45058e-09, 0, 1, 0.14164, 2.82401, -2.79984)
radius = 1.0
rings = 12

[node name="PlayerDetection" type="Area3D" parent="."]
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetection"]
transform = Transform3D(4.6064, 0, 0, 0, 4.6064, 0, 0, 0, 4.6064, 0, 0, 0)
shape = SubResource("BoxShape3D_pn6mw")

[node name="InteractionCamera" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 18.2237, -24.1088)

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
